Sat Feb  8 12:21:53 1997  Richard Basch  <basch@lehman.com>

	* krb5_16.def krb5_32.def:
		Export krb5_get_credentials_renew,krb5_get_credentials_validate

	* Makefile.in:
		Use WLIB definition in config/windows.in
		Attempt at making a functional SAP library build

Tue Feb  4 15:52:34 1997  Richard Basch  <basch@lehman.com>

	* krb5_16.def krb5_32.def: New ComErr interface definitions

	* gssapi32.def krb5_32.def:
		Remove unsupported statements (EXETYPE, RESIDENTNAME)

	* gssapi16.def krb5_16.def: Need to declare the library name (win16)

Thu Jan 30 21:27:07 1997  Richard Basch  <basch@lehman.com>

	* krb5_16.def krb5_32.def: 
		Export krb5_decrypt, krb5_encrypt,
		krb5_string_to_key, krb5_process_key, krb5_finish_key,
		krb5_init_random_key, krb5_finish_random_key,
		krb5_random_key, krb5_eblock_enctype
	* Makefile.in
		Win32 - Link against MSVCRT.LIB (runtime library)

Sat Dec 21 01:23:48 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c: Change the timebomb to be June 1, 1997.  Make the
		timebomb exit the application more gracefully.

Fri Dec 20 18:20:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb5_16.def: Change name of library in file to be krb5_16.def
	 	[PR#302]

Sat Nov 23 00:25:25 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
	
	* libkrb5.def: Renamed to krb5_16.def [PR#204]

	* Makefile.in (all-windows): Change name of dll from krb5_16.dll,
		which will be the final name of the DLL. [PR#204]

Wed Nov 20 18:28:47 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (clean-windows): Change the name of the Windows (16)
		dll to be krb516.dll, instead of libkrb5.dll

Fri Jul 12 20:32:29 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c: Added TIMEBOMB_INFO string which tells the user the
 	 	URL to look for more information about getting the new
 	 	version of the product.

Wed Jul 10 20:32:22 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c (krb5_win_do_init): New routine which does the