@@ -1,0 +1,16 @@
+LIBRARY		COMERR16
+DESCRIPTION	'DLL for ComErr'
+EXETYPE		WINDOWS
+CODE		PRELOAD MOVEABLE DISCARDABLE
+DATA		PRELOAD MOVEABLE SINGLE
+HEAPSIZE	8192
+
+EXPORTS
+	WEP					@1001 RESIDENTNAME
+	LibMain					@1002
+;
+	_com_err
+	com_err_va
+	error_message
+	add_error_table
+	remove_error_table
